<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contextClickable="true"
    android:focusable="auto"
    android:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navigation_edit"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linear_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/rotate_move"
            app:layout_constraintStart_toStartOf="@id/navigation_edit"
            app:layout_constraintTop_toTopOf="@id/navigation_edit">

            <RadioGroup
                android:id="@+id/radiogroup_liniar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/navigation_forward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/droid_forward"
                    tools:layout_editor_absoluteX="26dp"
                    tools:layout_editor_absoluteY="16dp" />

                <RadioButton
                    android:id="@+id/navigation_backward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/droid_backward"
                    tools:layout_editor_absoluteX="26dp"
                    tools:layout_editor_absoluteY="70dp" />
            </RadioGroup>

            <EditText
                android:id="@+id/linear_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"
                app:layout_constraintBottom_toBottomOf="@id/linear_move"
                app:layout_constraintEnd_toEndOf="@id/linear_move"
                app:layout_constraintStart_toStartOf="@id/linear_move"
                app:layout_constraintTop_toBottomOf="@id/radiogroup_liniar"
                tools:layout_editor_absoluteY="127dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rotate_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/navigation_power_label"
            app:layout_constraintEnd_toEndOf="@id/navigation_edit"
            app:layout_constraintStart_toStartOf="@id/navigation_edit"
            app:layout_constraintTop_toBottomOf="@id/linear_move">

            <RadioGroup
                android:id="@+id/radiogroup_rotate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/navigation_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/droid_right"
                    tools:layout_editor_absoluteX="26dp"
                    tools:layout_editor_absoluteY="16dp" />

                <RadioButton
                    android:id="@+id/navigation_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/droid_left"
                    tools:layout_editor_absoluteX="26dp"
                    tools:layout_editor_absoluteY="70dp" />
            </RadioGroup>

            <EditText
                android:id="@+id/rotate_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"
                app:layout_constraintEnd_toEndOf="@id/rotate_move"
                app:layout_constraintStart_toStartOf="@id/rotate_move"
                app:layout_constraintTop_toBottomOf="@id/radiogroup_rotate"
                tools:layout_editor_absoluteY="127dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/navigation_power_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:clickable="false"
            android:contextClickable="false"
            android:focusable="false"
            android:inputType="none"
            android:text="@string/droid_navigation_power"
            app:layout_constraintBottom_toTopOf="@id/navigation_front"
            app:layout_constraintEnd_toStartOf="@id/navigation_power"
            app:layout_constraintStart_toStartOf="@id/navigation_edit"
            app:layout_constraintTop_toBottomOf="@id/rotate_move" />

        <EditText
            android:id="@+id/navigation_power"
            android:layout_width="107dp"
            android:layout_height="44dp"
            android:layout_marginTop="24dp"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@id/navigation_back"
            app:layout_constraintEnd_toEndOf="@id/navigation_edit"
            app:layout_constraintStart_toEndOf="@id/navigation_power_label"
            app:layout_constraintTop_toBottomOf="@id/rotate_move" />

        <Button
            android:id="@+id/navigation_front"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/droid_navigation_front"
            app:layout_constraintBottom_toTopOf="@id/navigation_update"
            app:layout_constraintEnd_toStartOf="@id/navigation_back"
            app:layout_constraintStart_toStartOf="@id/navigation_edit"
            app:layout_constraintTop_toBottomOf="@id/navigation_power_label" />

        <Button
            android:id="@+id/navigation_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/droid_navigation_back"
            app:layout_constraintBottom_toTopOf="@id/navigation_update"
            app:layout_constraintEnd_toEndOf="@id/navigation_edit"
            app:layout_constraintStart_toEndOf="@id/navigation_front"
            app:layout_constraintTop_toBottomOf="@id/navigation_power" />

        <Button
            android:id="@+id/navigation_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/droid_navigation_update"
            app:layout_constraintEnd_toEndOf="@id/navigation_edit"
            app:layout_constraintStart_toEndOf="@id/navigation_delete"
            app:layout_constraintTop_toBottomOf="@id/navigation_back" />

        <Button
            android:id="@+id/navigation_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/droid_navigation_delete"
            app:layout_constraintEnd_toStartOf="@id/navigation_update"
            app:layout_constraintStart_toStartOf="@id/navigation_edit"
            app:layout_constraintTop_toBottomOf="@id/navigation_front" />

        <Button
            android:id="@+id/navigation_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/droid_navigation_up"
            app:layout_constraintEnd_toStartOf="@id/navigation_down"
            app:layout_constraintStart_toStartOf="@id/navigation_edit"
            app:layout_constraintTop_toBottomOf="@id/navigation_delete" />

        <Button
            android:id="@+id/navigation_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/droid_navigation_down"
            app:layout_constraintEnd_toEndOf="@id/navigation_edit"
            app:layout_constraintStart_toEndOf="@id/navigation_up"
            app:layout_constraintTop_toBottomOf="@id/navigation_update" />

        <TextView
            android:id="@+id/run_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/droid_navigation_run_label"
            app:layout_constraintEnd_toEndOf="@id/navigation_edit"
            app:layout_constraintStart_toStartOf="@id/navigation_edit"
            app:layout_constraintTop_toBottomOf="@+id/navigation_down" />

        <Button
            android:id="@+id/droid_navigation_run_direct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/droid_navigation_run_direct"
            app:layout_constraintBottom_toTopOf="@id/navigation_upload"
            app:layout_constraintEnd_toStartOf="@+id/droid_navigation_run_reverse"
            app:layout_constraintStart_toStartOf="@id/navigation_edit"
            app:layout_constraintTop_toBottomOf="@id/run_label"
            tools:layout_editor_absoluteY="514dp" />

        <Button
            android:id="@+id/droid_navigation_run_reverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/droid_navigation_run_reverse"
            app:layout_constraintBottom_toTopOf="@id/navigation_upload"
            app:layout_constraintEnd_toEndOf="@id/navigation_edit"
            app:layout_constraintStart_toEndOf="@id/droid_navigation_run_direct"
            app:layout_constraintTop_toBottomOf="@id/run_label" />

        <Button
            android:id="@+id/navigation_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/droid_navigation_upload"
            app:layout_constraintEnd_toEndOf="@id/navigation_edit"
            app:layout_constraintStart_toStartOf="@id/navigation_edit"
            app:layout_constraintTop_toBottomOf="@id/droid_navigation_run_direct" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navigation_view"
        android:layout_width="180dp"
        android:layout_height="779dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/navigation_edit"
        app:layout_constraintTop_toTopOf="parent">

        <ListView
            android:id="@+id/run_on_droid_list"
            android:layout_width="154dp"
            android:layout_height="769dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>